  directory structure. This means that your path format settings are
  respected in BPD's browsing hierarchy. This may come at a performance
  cost, however. The virtual filesystem used by BPD is available for
  reuse by plugins (e.g., the FUSE plugin).
* Singleton imports ("beet import -s") can now take individual files as
  arguments as well as directories.
* Fix crasher in quiet singleton imports (import -qs).
* Fix crash when autotagging files with no metadata.
* Fix a rare deadlock when finishing the import pipeline.
* Fix an issue that was causing mpdupdate to run twice for every album.
* Fix a bug that caused release dates/years not to be fetched.
* Fix a crasher when setting MBIDs on MP3s file metadata.
* Fix a "broken pipe" error when piping beets' standard output.
* A better error message is given when the database file is unopenable.
* Suppress errors due to timeouts and bad responses from MusicBrainz.
* Fix a crash on album queries with item-only field names.

1.0b8
-----
* Better support for singleton (non-album) tracks. Whereas beets
  previously only really supported full albums, now it can also keep
  track of individual, off-album songs. The "singleton" path format
  can be used to customize where these tracks are stored. To import
  singleton tracks, provide the -s switch to the import command or,
  while doing a normal full-album import, choose the "as Tracks" (T)
  option to add singletons to your library. To list only singleton or
  only album tracks, use the new "singleton:" query term: the query
  "singleton:true" matches only singleton tracks; "singleton:false"
  matches only album tracks. The lastid plugin has been extended to
  support matching individual items as well.
* The importer/autotagger system has been heavily refactored in this
  release. If anything breaks as a result, please let me know.
* Support for album art embedded in files. A new plugin, called
  "embedart", implements this functionality. Enable the plugin to